creating the start of buss-mall

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
         </nav>
     </header>
     <main>
-
+        <section>
+            <img id="left" src="" alt="">
+            <img id="right" src="" alt="">
+        </section>
     </main>
     <footer>
         
