adding in the chart

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bus Mall</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
 </head>
 <body>
     <header>
@@ -18,11 +19,16 @@
             <img id="left" src="" alt="">
             <img id="right" src="" alt="">
         </section>
+
+        <canvas id="chart" width="400" height="400">
+
+        </canvas>
     </main>
     <footer>
         
     </footer>
     
-    <script src="app.js"></script>
+    <!-- <script src="app.js"></script> -->
+    <script src="test.js"></script>
 </body>
 </html>
