--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 
     <main>
 
-        <div id="selected">
+        <div>
+            <ul id="selected">
 
+            </ul>
         </div>
 
         <section id="click-me">
@@ -26,9 +28,11 @@
             <img class="products" id="middle" src="/img/bag.jpg">
             <img class="products" id="right" src="img/boots.jpg">
             
-            <h3 id="left-text"></h3>
-            <h3 id="middle-text"></h3>
-            <h3 id="right-text"></h3>
+            <div>
+                <h3 id="left-text"></h3>
+                <h3 id="middle-text"></h3>
+                <h3 id="right-text"></h3>
+            </div>
         </section>
 
         <canvas id="chart" width="400" height="400">
