should have done this at the start but I am making my user stories now

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <header>
+        <button id="bus-mall">Bus Mall</button>
         <nav>
 
         </nav>
@@ -21,19 +22,23 @@
             <ul id="selected">
 
             </ul>
+
+            <section id="click-me">
+                <div id="product-images">
+                    <img class="products" id="left" src="/img/banana.jpg">
+                    <img class="products" id="middle" src="/img/bag.jpg">
+                    <img class="products" id="right" src="img/boots.jpg">
+                </div>
+                
+                <div id="product-name">
+                    <h3 id="left-text"></h3>
+                    <h3 id="middle-text"></h3>
+                    <h3 id="right-text"></h3>
+                </div>
+            </section>
         </div>
 
-        <section id="click-me">
-            <img class="products" id="left" src="/img/banana.jpg">
-            <img class="products" id="middle" src="/img/bag.jpg">
-            <img class="products" id="right" src="img/boots.jpg">
-            
-            <div>
-                <h3 id="left-text"></h3>
-                <h3 id="middle-text"></h3>
-                <h3 id="right-text"></h3>
-            </div>
-        </section>
+        <hr>
 
         <canvas id="chart" width="400" height="400">
 
