Completed chart with a second bar set for how many times the images where displayed

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
             <section id="click-me">
                 <div id="product-images">
-                    <img class="products" id="left" src="/img/banana.jpg">
-                    <img class="products" id="middle" src="/img/bag.jpg">
-                    <img class="products" id="right" src="img/boots.jpg">
+                    <img class="products" id="left" src="./img/bag.jpg">
+                    <img class="products" id="middle" src="./img/banana.jpg">
+                    <img class="products" id="right" src="./img/bathroom.jpg">
                 </div>
                 
                 <div id="product-name">
@@ -40,7 +40,7 @@
 
         <hr>
 
-        <canvas id="chart" width="400" height="400">
+        <canvas id="chart" width="400px" height="400px">
 
         </canvas>
 
